fix: search button was broken on Firefox mobile

--- a/grails-app/assets/stylesheets/layout.css
+++ b/grails-app/assets/stylesheets/layout.css
@@ -782,10 +782,6 @@ ol li {
     left: 178px;
   }
 
-  #search {
-    width: 100%;
-  }
-
   #content,
   #foot {
     margin-left: 10px;
